--- a/build.gradle
+++ b/build.gradle
@@ -68,5 +68,6 @@ dependencies {
 	runtimeOnly "org.lwjgl:lwjgl-opengl::$lwjglNatives"
 	runtimeOnly "org.lwjgl:lwjgl-stb::$lwjglNatives"
 	implementation "org.joml:joml:${jomlVersion}"
+    implementation "org.json:json:20240303"
 }
 
