--- a/build.gradle
+++ b/build.gradle
@@ -73,6 +73,6 @@ dependencies {
     implementation "org.json:json:20240303"
 
     // https://mvnrepository.com/artifact/com.google.protobuf/protobuf-java
-    implementation group: 'com.google.protobuf', name: 'protobuf-java', version: '4.27.0-RC1'
+    implementation group: 'com.google.protobuf', name: 'protobuf-java', version: '3.25.3'
 }
 
